[build-system]
requires = ["scikit-build-core", "numpy", "pybind11", "Cython"]
build-backend = "scikit_build_core.build"

[project]
requires-python = ">=3.8"
name = "tiledb"
description = "Pythonic interface to the TileDB array storage manager"
readme = "README.md"
authors = [
  {name = "TileDB, Inc.", email = "help@tiledb.io"}
]
maintainers = [
  {name = "TileDB, Inc.", email = "help@tiledb.io"}
]
license = {text = "MIT"}
classifiers=[
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Intended Audience :: Information Technology",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Operating System :: Unix",
    "Operating System :: POSIX :: Linux",
    "Operating System :: MacOS :: MacOS X",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]
dependencies = [
    "numpy",
]
dynamic = ["version"]

[project.urls]
homepage = "https://github.com/TileDB-Inc/TileDB-Py"

[tool.setuptools_scm]
version_file = "tiledb/_generated_version.py"

[tool.scikit-build]
wheel.expand-macos-universal-tags = true
metadata.version.provider = "scikit_build_core.metadata.setuptools_scm"
wheel.packages = ["tiledb"]
wheel.exclude = [
    "tiledb/cc/",
    "tiledb/*.cc",
    "tiledb/*.cmake",
    "tiledb/*.pyx",
    "tiledb/*.pxd",
    "tiledb/*.pxi",
]

[tool.pytest.ini_options]
python_classes = "*Test*"
python_files = "test_*.py"
testpaths = ["tiledb/tests"]
addopts = "--ignore=tiledb/tests/perf --ignore=tiledb/tests/__pycache__"
filterwarnings = [
    "error",
    "default::pytest.PytestWarning",
    "default::DeprecationWarning:distributed",
    # Pyarrow emits a warning regarding use of deprecated Pandas function
    # Remove this once we bump Pyarrow version
    "ignore:Passing a BlockManager to DataFrame is deprecated:DeprecationWarning"
]
addopts = [
    "--import-mode=importlib",
]

[tool.ruff]
ignore = ["E501", "E722"]
extend-select = ["I001"]
extend-exclude = ["doc"]
fix = true

[tool.ruff.lint]
select = ["NPY201"]

[tool.ruff.per-file-ignores]
"tiledb/__init__.py" = ["F401"]

[tool.cibuildwheel]
test-requires = [
    "pytest",
    "hypothesis",
    "psutil",
    "pyarrow",
]
test-command = "pytest {project}"
