[build-system]
requires = [
    "scikit-build-core",
    "pybind11",
    "Cython",
    "numpy==1.17.* ; python_version == '3.8' and platform_machine not in 'arm64|aarch64'",
    "numpy==1.19.* ; python_version == '3.8' and platform_machine == 'aarch64'",
    "numpy==1.21.* ; python_version == '3.8' and platform_machine == 'arm64'",
    "numpy>=2.0.0rc2 ; python_version >= '3.9'"
]
build-backend = "scikit_build_core.build"

[project]
requires-python = ">=3.8"
name = "tiledb"
description = "Pythonic interface to the TileDB array storage manager"
readme = "README.md"
license = {text = "MIT"}
authors = [
  {name = "TileDB, Inc.", email = "help@tiledb.io"}
]
maintainers = [
  {name = "TileDB, Inc.", email = "help@tiledb.io"}
]
classifiers=[
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Intended Audience :: Information Technology",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Operating System :: Unix",
    "Operating System :: POSIX :: Linux",
    "Operating System :: MacOS :: MacOS X",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]
dependencies = [
  "numpy>=1.17 ; python_version == '3.8' and platform_machine not in 'arm64|aarch64'",
  "numpy>=1.19 ; python_version == '3.8' and platform_machine == 'aarch64'",
  "numpy>=1.21 ; python_version == '3.8' and platform_machine == 'arm64'",
  "numpy>=1.25 ; python_version >= '3.9'",
]
dynamic = ["version"]

[project.optional-dependencies]
doc = [
    "jinja2==3.0.0",
    "sphinx-rtd-theme==2.0.0",
    "Sphinx",
    "breathe",
]
test = [
    "pytest",
    "hypothesis",
    "psutil",
    "pyarrow",
    "pandas",
]

[project.urls]
homepage = "https://github.com/TileDB-Inc/TileDB-Py"

[tool.setuptools_scm]
version_file = "tiledb/_generated_version.py"

[tool.scikit-build]
wheel.expand-macos-universal-tags = true
metadata.version.provider = "scikit_build_core.metadata.setuptools_scm"
wheel.packages = ["tiledb", "examples", "external"]
wheel.license-files = ["LICENSE", "external/LICENSE-*.txt"]
sdist.include = ["tiledb/_generated_version.py"]

[tool.scikit-build.cmake.define]
TILEDB_PATH = {env="TILEDB_PATH"}
TILEDB_VERSION = {env="TILEDB_VERSION"}
TILEDB_HASH = {env="TILEDB_HASH"}
TILEDB_REMOVE_DEPRECATIONS = "ON"

[tool.pytest.ini_options]
python_classes = "*Test*"
python_files = "test_*.py"
testpaths = ["tiledb/tests"]
addopts = [
    "--import-mode=importlib",
    "--ignore=tiledb/tests/perf",
    "--ignore=tiledb/tests/__pycache__",
]
filterwarnings = [
    "error",
    "default::pytest.PytestWarning",
    "default::DeprecationWarning:distributed",
    # Pyarrow emits a warning regarding use of deprecated Pandas function
    # Remove this once we bump Pyarrow version
    "ignore:Passing a BlockManager to DataFrame is deprecated:DeprecationWarning"
]

[tool.ruff]
ignore = ["E501", "E722"]
extend-select = ["I001"]
extend-exclude = ["doc"]
fix = true

[tool.ruff.lint]
select = ["NPY201"]

[tool.ruff.per-file-ignores]
"tiledb/__init__.py" = ["F401"]

[tool.cibuildwheel]
test-requires = [
    "pytest",
    "hypothesis",
    "psutil",
    "pyarrow",
    "pandas",
]
test-command = "pytest {project}"
